--- a/Practice/Dockerfile
+++ b/Practice/Dockerfile
@@ -41,7 +41,7 @@ RUN useradd -u 1000 -ms /bin/bash -g www www
 #COPY php /var/www
 
 # Copy existing application directory permissions
-COPY --chown=www:www php /var/www
+#COPY --chown=www:www php /var/www
 
 # Change current user to www
 USER www
