--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,10 +24,21 @@ env:
 jobs:
   publish_latest:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      # This is used to complete the identity challenge
+      # with sigstore/fulcio when running outside of PRs.
+      id-token: write
+      
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - uses: docker/setup-buildx-action@v1
+      
+      # Workaround: https://github.com/docker/build-push-action/issues/461
+      - name: Setup Docker buildx
+        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+      
       
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
