--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,6 +18,7 @@ on:
 jobs:
   publish_latest:
     runs-on: ubuntu-latest
+    environment: secrets
     permissions:
       contents: read
       packages: write
