--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -39,6 +39,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          tag: latest
           file: Practice/Dockerfile
 
         
